test/files/neg/t4425.check
t4425.scala:3: error: isInstanceOf cannot test if value types are references.
  42 match { case _ X _ => () }
                    ^
one error found
